--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
   <body>
     <header class="cabeçalho">
       <div class="container">
-        <span class="cabeçalho__menu_hamburguer container__imagem"></span>
+        <input type="checkbox" id="menu" class="container__botao" />
+        <label for="menu">
+          <span class="cabeçalho__menu_hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__titulo">Categorias</li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">FRONT-END</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">BUSINESS</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">DESIGN & UX</a>
+          </li>
+        </ul>
         <img
           src="./assets/Logo.svg"
           alt="Logo da Alurabooks"
