--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AluraBooks</title>
     <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -51,5 +61,74 @@
         /></a>
       </div>
     </header>
+    <section class="banner">
+      <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+      <p class="banner__texto">
+        Encontre em nossa estante o que precisa para seu desenvlvimento!
+      </p>
+      <input
+        type="search"
+        class="banner__pesquisa"
+        placeholder="Qual será sua próxima leitura?"
+      />
+    </section>
+    <section class="carrossel">
+      <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
+      <div class="swiper">
+        <div class="swiper-pagination"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./assets/Img Carrossel/ApacheKafka.svg" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/Img Carrossel/Liderança.svg" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/Img Carrossel/Nodejs.svg" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/Img Carrossel/Portugol.svg" />
+          </div>
+          <div class="swiper-slide">
+            <img src="./assets/Img Carrossel/Tuning.svg" />
+          </div>
+        </div>
+
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+      <div class="card">
+        <div class="card__descrição">
+          <div class="descrição">
+            <h3 class="descrição__titulo">
+              Talvez você também se interesse por...
+            </h3>
+            <h2 class="descrição__titulo-livro">Angular 11 e firebase</h2>
+            <p class="descrição__texto">
+              Construindo uma aplicação integrada com a plataforma do google
+            </p>
+          </div>
+          <img src="./assets/Angular.svg" class="descrição__imagem" alt="" />
+        </div>
+        <div class="card__botões">
+          <ul class="botões">
+            <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
+            <li class="botões__item"><img src="./assets/Compras.svg" /></li>
+          </ul>
+          <a href="#" class="botões__ancora">Saiba mais </a>
+        </div>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper(".swiper", {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination: {
+          el: ".swiper-pagination",
+          type: "bullet",
+        },
+      });
+    </script>
   </body>
 </html>
