--- a/index.html
+++ b/index.html
@@ -119,6 +119,99 @@
         </div>
       </div>
     </section>
+    <section class="carrossel">
+      <h2 class="carrossel__titulo">Mais Vendidos</h2>
+      <div class="carrosel__container">
+        <div class="swiper">
+          <div class="swiper-pagination"></div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/ApacheKafka.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Liderança.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Nodejs.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Portugol.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Tuning.svg" />
+            </div>
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      
+      <div class="card">
+        <div class="card__descrição">
+          <div class="descrição">
+            <img src="./assets/Estrelinhas.svg" alt="avaliação 5 estrelas">
+            <h3 class="descrição__titulo">Autora do Mês</h3>
+            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <p class="descrição__texto">
+              Analista de sistemas e escritora, Juliana é especialista em
+              Front-End.
+            </p>
+          </div>
+          <img
+            src="./assets/Perfil-escritora 1.svg"
+            class="descrição__imagem"
+            alt=""
+          />
+        </div>
+        <div class="card__botões">
+          <ul class="botões">
+            <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
+            <li class="botões__item"><img src="./assets/Compras.svg" /></li>
+          </ul>
+          <a href="#" class="botões__ancora">Saiba mais </a>
+        </div>
+      </div>
+
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+    </section>
+    <section class="topicos">
+      <h2 class="topicos__titulos">TÓPICOS VISITADOS RECENTEMENTE</h2>
+      <ul class="topicos__lista">
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Android</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Marketing Digital</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Agile</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Startups</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">HTML & CSS</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Python</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">oo</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Java</a>
+        </li>
+      </ul>
+    </section>
+    <section class="contato">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+      <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+    <hr/>
+    <footer class="rodapé">
+      <h2 class="rodapé__titulo">Grupo Alura</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script>
       const swiper = new Swiper(".swiper", {
