--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
@@ -48,10 +49,36 @@
           alt="Logo da Alurabooks"
           class="container__imagem"
         />
+        <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
       </div>
+      <ul class="opções">
+        <input type="checkbox" id="opções-menu" class="opções__botão">
+        <label for="opções-menu">
+        <li class="opções__item">Categorias</li>
+      </label>
+      <ul class="lista-menu">
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">FRONT-END</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">BUSINESS</a>
+        </li>
+        <li class="lista-menu__item">
+          <a href="#" class="lista-menu__link">DESIGN & UX</a>
+        </li>
+      </ul>
+        <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
+        <li class="opções__item"><a href="#" class="opções__link">Minha Estante</a></li>
+      </ul>
       <div class="container">
         <a href="#"
-          ><img src="./assets/Favoritos.svg" class="container__imagem"
+          ><img src="./assets/Favoritos.svg" class="container__imagem container__imagem-transparente"
         /></a>
         <a href="#"
           ><img src="./assets/Compras.svg" class="container__imagem"
