--- a/index.html
+++ b/index.html
@@ -231,13 +231,88 @@
       </ul>
     </section>
     <section class="contato">
+      <div class="contato__descrição">
       <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
       <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+    </div>
       <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
     <hr/>
     <footer class="rodapé">
       <h2 class="rodapé__titulo">Grupo Alura</h2>
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Educação</li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/Caelum.svg" alt="Logo do Caelum">
+          <a href="#" class="lista-rodapé__link">Caelum</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/CasaDoCodigo.svg" alt="Logo Casa do Código">
+          <a href="#" class="lista-rodapé__link">Casa do Código</a>
+        </li>
+      </ul>
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Educação Online</li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/Alura.svg" alt="Logo Alura">
+          <a href="#" class="lista-rodapé__link">Alura</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/AluraEmpresas.svg" alt="Logo Alura Empresas">
+          <a href="#" class="lista-rodapé__link">Alura Para Empresas</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/AluraLATAM.svg" alt="Logo Alura Latam">
+          <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/AluraStart.svg" alt="Logo Alura Start">
+          <a href="#" class="lista-rodapé__link">Alura Start</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/MusicDot.svg" alt="Logo MusicaDot">
+          <a href="#" class="lista-rodapé__link">MusicaDot</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/AluraLingua.svg" alt="Logo Alura Alura Lingua">
+          <a href="#" class="lista-rodapé__link">Alura Língua</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/PM3.svg" alt="Logo PM3">
+          <a href="#" class="lista-rodapé__link">PM3</a>
+        </li>
+      </ul>
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__titulo">Comunidade</li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/HipstersTech.svg" alt="Logo HipstersTech">
+          <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/ScubaDev.svg" alt="Logo ScubaDev">
+          <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/LayersTech.svg" alt="Logo LayersTech">
+          <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/LikeABoss.svg" alt="Logo LikeABoss">
+          <a href="#" class="lista-rodapé__link">Like a Boss</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/CarreiraSemFronteira.svg" alt="Logo CarreiraSemFronteira">
+          <a href="#" class="lista-rodapé__link">Carreira sem Fronteira</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/HipstersJobs.svg" alt="Logo HipstersJobs">
+          <a href="#" class="lista-rodapé__link">Hipsters ponto Jobs</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="./assets/assets footer/GUJ.svg" alt="Logo GUJ">
+          <a href="#" class="lista-rodapé__link">GUJ</a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
     <script>
