--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
@@ -49,43 +52,53 @@
           alt="Logo da Alurabooks"
           class="container__imagem"
         />
-        <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
+        <h1 class="container__titulo">
+          <b class="container__titulo--negrito">Alura</b>Books
+        </h1>
       </div>
       <ul class="opções">
-        <input type="checkbox" id="opções-menu" class="opções__botão">
+        <input type="checkbox" id="opções-menu" class="opções__botão" />
         <label for="opções-menu">
-        <li class="opções__item">Categorias</li>
-      </label>
-      <ul class="lista-menu">
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+          <li class="opções__item">Categorias</li>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">PROGRAMAÇÃO</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">FRONT-END</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">BUSINESS</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">DESIGN & UX</a>
+          </li>
+        </ul>
+        <li class="opções__item">
+          <a href="#" class="opções__link">Favoritos</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">FRONT-END</a>
+        <li class="opções__item">
+          <a href="#" class="opções__link">Minha Estante</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">INFRAESTRUTURA</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">BUSINESS</a>
-        </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">DESIGN & UX</a>
-        </li>
-      </ul>
-        <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-        <li class="opções__item"><a href="#" class="opções__link">Minha Estante</a></li>
       </ul>
       <div class="container">
         <a href="#"
-          ><img src="./assets/Favoritos.svg" class="container__imagem container__imagem-transparente"
+          ><img
+            src="./assets/Favoritos.svg"
+            class="container__imagem container__imagem-transparente"
         /></a>
-        <a href="#"
-          ><img src="./assets/Compras.svg" class="container__imagem"
-        /></a>
-        <a href="#"
-          ><img src="./assets/Usuário.svg" class="container__imagem"
-        /></a>
+        <a href="#" class="container__link"
+          ><img src="./assets/Compras.svg" class="container__imagem" />
+          <p class="container__texto">Minha Sacola</p>
+        </a>
+        <a href="#" class="container__link"
+          ><img src="./assets/Usuário.svg" class="container__imagem" />
+          <p class="container__texto">Meu perfil</p>
+        </a>
       </div>
     </header>
     <section class="banner">
@@ -101,54 +114,56 @@
     </section>
     <section class="carrossel">
       <h2 class="carrossel__titulo">Últimos Lançamentos</h2>
-      <div class="swiper">
-        <div class="swiper-pagination"></div>
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="./assets/Img Carrossel/ApacheKafka.svg" />
+      <div class="carrossel__conteiner">
+        <div class="swiper">
+          <div class="swiper-pagination"></div>
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/ApacheKafka.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Liderança.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Nodejs.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Portugol.svg" />
+            </div>
+            <div class="swiper-slide">
+              <img src="./assets/Img Carrossel/Tuning.svg" />
+            </div>
           </div>
-          <div class="swiper-slide">
-            <img src="./assets/Img Carrossel/Liderança.svg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/Img Carrossel/Nodejs.svg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/Img Carrossel/Portugol.svg" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./assets/Img Carrossel/Tuning.svg" />
-          </div>
-        </div>
 
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
-      <div class="card">
-        <div class="card__descrição">
-          <div class="descrição">
-            <h3 class="descrição__titulo">
-              Talvez você também se interesse por...
-            </h3>
-            <h2 class="descrição__titulo-livro">Angular 11 e firebase</h2>
-            <p class="descrição__texto">
-              Construindo uma aplicação integrada com a plataforma do google
-            </p>
-          </div>
-          <img src="./assets/Angular.svg" class="descrição__imagem" alt="" />
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
-        <div class="card__botões">
-          <ul class="botões">
-            <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
-            <li class="botões__item"><img src="./assets/Compras.svg" /></li>
-          </ul>
-          <a href="#" class="botões__ancora">Saiba mais </a>
+        <div class="card">
+          <div class="card__descrição">
+            <div class="descrição">
+              <h3 class="descrição__titulo">
+                Talvez você também se interesse por...
+              </h3>
+              <h2 class="descrição__titulo-livro">Angular 11 e firebase</h2>
+              <p class="descrição__texto">
+                Construindo uma aplicação integrada com a plataforma do google
+              </p>
+            </div>
+            <img src="./assets/Angular.svg" class="descrição__imagem" alt="" />
+          </div>
+          <div class="card__botões">
+            <ul class="botões">
+              <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
+              <li class="botões__item"><img src="./assets/Compras.svg" /></li>
+            </ul>
+            <a href="#" class="botões__ancora">Saiba mais </a>
+          </div>
         </div>
       </div>
     </section>
     <section class="carrossel">
       <h2 class="carrossel__titulo">Mais Vendidos</h2>
-      <div class="carrosel__container">
+      <div class="carrossel__conteiner">
         <div class="swiper">
           <div class="swiper-pagination"></div>
           <div class="swiper-wrapper">
@@ -171,30 +186,31 @@
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
-      
-      <div class="card">
-        <div class="card__descrição">
-          <div class="descrição">
-            <img src="./assets/Estrelinhas.svg" alt="avaliação 5 estrelas">
-            <h3 class="descrição__titulo">Autora do Mês</h3>
-            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">
-              Analista de sistemas e escritora, Juliana é especialista em
-              Front-End.
-            </p>
+
+        <div class="card">
+          <div class="card__descrição">
+            <div class="descrição">
+              <img src="./assets/Estrelinhas.svg" alt="avaliação 5 estrelas" />
+              <h3 class="descrição__titulo">Autora do Mês</h3>
+              <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+              <p class="descrição__texto">
+                Analista de sistemas e escritora, Juliana é especialista em
+                Front-End.
+              </p>
+            </div>
+            <img
+              src="./assets/Perfil-escritora 1.svg"
+              class="descrição__imagem"
+              alt=""
+            />
           </div>
-          <img
-            src="./assets/Perfil-escritora 1.svg"
-            class="descrição__imagem"
-            alt=""
-          />
-        </div>
-        <div class="card__botões">
-          <ul class="botões">
-            <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
-            <li class="botões__item"><img src="./assets/Compras.svg" /></li>
-          </ul>
-          <a href="#" class="botões__ancora">Saiba mais </a>
+          <div class="card__botões">
+            <ul class="botões">
+              <li class="botões__item"><img src="./assets/Favoritos.svg" /></li>
+              <li class="botões__item"><img src="./assets/Compras.svg" /></li>
+            </ul>
+            <a href="#" class="botões__ancora">Saiba mais </a>
+          </div>
         </div>
       </div>
 
@@ -232,84 +248,120 @@
     </section>
     <section class="contato">
       <div class="contato__descrição">
-      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-      <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-    </div>
-      <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">
+          Atualizações de e-books, novos livros, promoções e outros.
+        </p>
+      </div>
+      <input
+        type="email"
+        placeholder="Cadastre seu e-mail"
+        class="contato__email"
+      />
     </section>
-    <hr/>
+    <hr />
     <footer class="rodapé">
       <h2 class="rodapé__titulo">Grupo Alura</h2>
       <ul class="lista-rodapé">
         <li class="lista-rodapé__titulo">Educação</li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/Caelum.svg" alt="Logo do Caelum">
+          <img src="./assets/assets footer/Caelum.svg" alt="Logo do Caelum" />
           <a href="#" class="lista-rodapé__link">Caelum</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/CasaDoCodigo.svg" alt="Logo Casa do Código">
+          <img
+            src="./assets/assets footer/CasaDoCodigo.svg"
+            alt="Logo Casa do Código"
+          />
           <a href="#" class="lista-rodapé__link">Casa do Código</a>
         </li>
       </ul>
       <ul class="lista-rodapé">
         <li class="lista-rodapé__titulo">Educação Online</li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/Alura.svg" alt="Logo Alura">
+          <img src="./assets/assets footer/Alura.svg" alt="Logo Alura" />
           <a href="#" class="lista-rodapé__link">Alura</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/AluraEmpresas.svg" alt="Logo Alura Empresas">
+          <img
+            src="./assets/assets footer/AluraEmpresas.svg"
+            alt="Logo Alura Empresas"
+          />
           <a href="#" class="lista-rodapé__link">Alura Para Empresas</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/AluraLATAM.svg" alt="Logo Alura Latam">
+          <img
+            src="./assets/assets footer/AluraLATAM.svg"
+            alt="Logo Alura Latam"
+          />
           <a href="#" class="lista-rodapé__link">Alura LATAM</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/AluraStart.svg" alt="Logo Alura Start">
+          <img
+            src="./assets/assets footer/AluraStart.svg"
+            alt="Logo Alura Start"
+          />
           <a href="#" class="lista-rodapé__link">Alura Start</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/MusicDot.svg" alt="Logo MusicaDot">
+          <img src="./assets/assets footer/MusicDot.svg" alt="Logo MusicaDot" />
           <a href="#" class="lista-rodapé__link">MusicaDot</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/AluraLingua.svg" alt="Logo Alura Alura Lingua">
+          <img
+            src="./assets/assets footer/AluraLingua.svg"
+            alt="Logo Alura Alura Lingua"
+          />
           <a href="#" class="lista-rodapé__link">Alura Língua</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/PM3.svg" alt="Logo PM3">
+          <img src="./assets/assets footer/PM3.svg" alt="Logo PM3" />
           <a href="#" class="lista-rodapé__link">PM3</a>
         </li>
       </ul>
       <ul class="lista-rodapé">
         <li class="lista-rodapé__titulo">Comunidade</li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/HipstersTech.svg" alt="Logo HipstersTech">
+          <img
+            src="./assets/assets footer/HipstersTech.svg"
+            alt="Logo HipstersTech"
+          />
           <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/ScubaDev.svg" alt="Logo ScubaDev">
+          <img src="./assets/assets footer/ScubaDev.svg" alt="Logo ScubaDev" />
           <a href="#" class="lista-rodapé__link">Scuba Dev</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/LayersTech.svg" alt="Logo LayersTech">
+          <img
+            src="./assets/assets footer/LayersTech.svg"
+            alt="Logo LayersTech"
+          />
           <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/LikeABoss.svg" alt="Logo LikeABoss">
+          <img
+            src="./assets/assets footer/LikeABoss.svg"
+            alt="Logo LikeABoss"
+          />
           <a href="#" class="lista-rodapé__link">Like a Boss</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/CarreiraSemFronteira.svg" alt="Logo CarreiraSemFronteira">
+          <img
+            src="./assets/assets footer/CarreiraSemFronteira.svg"
+            alt="Logo CarreiraSemFronteira"
+          />
           <a href="#" class="lista-rodapé__link">Carreira sem Fronteira</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/HipstersJobs.svg" alt="Logo HipstersJobs">
+          <img
+            src="./assets/assets footer/HipstersJobs.svg"
+            alt="Logo HipstersJobs"
+          />
           <a href="#" class="lista-rodapé__link">Hipsters ponto Jobs</a>
         </li>
         <li class="lista-rodapé__item">
-          <img src="./assets/assets footer/GUJ.svg" alt="Logo GUJ">
+          <img src="./assets/assets footer/GUJ.svg" alt="Logo GUJ" />
           <a href="#" class="lista-rodapé__link">GUJ</a>
         </li>
       </ul>
