--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="cabeçalho">
       <div class="container">
         <input type="checkbox" id="menu" class="container__botao" />
-        <label for="menu">
+        <label for="menu" class="container__rotulo">
           <span class="cabeçalho__menu_hamburguer container__imagem"></span>
         </label>
         <ul class="lista-menu">
@@ -58,7 +58,7 @@
       </div>
       <ul class="opções">
         <input type="checkbox" id="opções-menu" class="opções__botão" />
-        <label for="opções-menu">
+        <label for="opções-menu" class="opções__rotulo">
           <li class="opções__item">Categorias</li>
         </label>
         <ul class="lista-menu">
